      source (closes: #350738)
    + custom CMake based build system (closes: #350739 and hopefully
      closes: #350254, reopen if not)
  * removed most of the anti-linux2.6 FUD from program messages (unless beeing
    in verbose mode). Decent information about code modifications is okay,
    subtle propaganda isn't (closes: #377145)
  * dropped the shm build (kernel 2.2 is history)
  * dropped dpatch integration, we are the upstream now
  * disabled debconf messages and device-creating code for now, things like
    hints to create device files are essential for only few people and can
    equaly be presented as program messages. Why shall we still MAKEDEV them?
    It's not like we have switched to kernel 2.0.1 yesterday 
    (closes: #342085, 188827, #200665)
  * long help output of wodim, mkisofs, cdda2wav goes to stdout IFF -help was
    used deliberately. No matter what JS claims to be "the Unix Tradition"
    (closes: #138490, #299641)
  * added more meaningful error message on -dvd-video failure (closes: #324586)
  * minor cdda2mp3/cdda2ogg scripts fixes suggested by Fabian Pietsch, plus
    fixes for unreliable encoder detection (closes: #283794, #344443) plus
    possible override of preset CDDA_DEVICE variable fixed. Made the list of
    selected audiotracks modifiable, see manpage (closes: #344445)
  * sync with 4:2.01+01a01-4ubuntu4:
    + merged README.ATAPI.setup with README.ATAPI.setup.ubuntu. Kernel 2.6 part
      now in the beginning and reflecting the reality (dev=/dev/drive syntax,
      no SUID requirement, closes: #304230, 377736)
    + 02_cdrecord_default_conf.dpatch: changed /dev/cdrom to /dev/cdrw which
      is more likely to match the correct device on udev using systems
  * 36_ATA_scanbus_ignore_locked.dpatch to ignore busy devices (eg. hda
    harddisk) while scanning with dev=ATA 
    (closes: #310689, #309250, #317793, 360295, 
  * Included 37_clean_dvdsup.dpatch (closes: #312062) based on
    cdrtools-2.01.01a04-dvd.patch.bz2 from